<resources>
    <string name="app_name">Inventory</string>

    <!-- Title for the activity to delete an item [CHAR LIMIT=20] -->
    <string name="editor_menu_delete_title">Delete</string>

    <!-- Title for the activity to save a new item [CHAR LIMIT=20] -->
    <string name="editor_menu_save_title">Done</string>

    <!-- Title for the activity to delete all data from database [CHAR LIMIT=20] -->
    <string name="catalog_menu_delete_title">Delete All</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="catalog_menu_add_item_title">Add Item</string>

    <!-- Title for the activity to logout [CHAR LIMIT=20] -->
    <string name="catalog_menu_logout_title">Logout</string>

    <!-- Toast message for error saving item [CHAR LIMIT=20] -->
    <string name="error_saving_item">Error saving item</string>

    <!-- Toast message for successfully updating item [CHAR LIMIT=20] -->
    <string name="successful_updating_item">Item updated</string>

    <!-- Toast message for error updating item [CHAR LIMIT=20] -->
    <string name="error_updating_item">Error updating item</string>

    <!-- Toast message for successfully saving item [CHAR LIMIT=20] -->
    <string name="successful_saving_item">Item saved</string>

    <!-- Title for EditorActivity for adding a new Item [CHAR LIMIT=20]-->
    <string name="title_editor_activity_new_item">Add Item</string>

    <!-- Title for EditorActivity for editing a new pet [CHAR LIMIT=20]-->
    <string name="title_editor_activity_edit_item">Edit item</string>

    <!-- Message for alert dialog in editor activity for deleting item [CHAR LIMIT=20] -->
    <string name="editor_alert_dialog_delete_item_message">Delete this item?</string>

    <!-- Positive button for alert dialog in editor activity of deleting item [CHAR LIMIT=20] -->
    <string name="editor_alert_dialog_delete_positive_button">Delete</string>

    <!-- Negative button for alert dialog in editor activity for canceling the dialog [CHAR LIMIT=20]-->
    <string name="editor_alert_dialog_delete_negative_button">Cancel</string>

    <!-- Message for alert dialog in editor activity for unsaved changes [CHAR LIMIT=20]-->
    <string name="editor_alert_dialog_unsaved_changes_message">Discard changes and quit editing?</string>

    <!-- Positive button for alert dialog in editor activity for unsaved changes dialog [CHAR LIMIT=20]-->
    <string name="editor_alert_dialog_unsaved_changes_positive_button">Discard</string>

    <!-- Negative button for alert dialog in editor activity for unsaved changes dialog [CHAR LIMIT=20]-->
    <string name="editor_alert_dialog_unsaved_changes_negative_button">Keep editing</string>

    <!-- Message for snackBar in editor activity for no supplier email and item quantity for placing an order [CHAR LIMIT=40] -->
    <string name="editor_snackBar_no_supplier_email_no_quantity">No supplier email and item quantity</string>

    <!-- Message for snackBar in editor activity for no supplier email for placing an order [CHAR LIMIT=30] -->
    <string name="editor_snackBar_no_supplier_email">No supplier email</string>

    <!-- Message for snackBar in editor activity for no item quantity for placing an order [CHAR LIMIT=30] -->
    <string name="editor_snackBar_no_item_quantity">No item quantity</string>

    <!-- Content description of item image in editor activity [CHAR LIMIT=20] -->
    <string name="editor_item_description_for_image">Item image</string>

    <!-- Message for snackBar in home screen for ordering an item [CHAR LIMIT=30] -->
    <string name="catalog_make_an_order_for_item_snackBar">Make an order for</string>

    <!-- Action button for snackBar in home screen for ordering an item [CHAR LIMIT=20] -->
    <string name="catalog_make_an_order_snackBar_action_button">order</string>

    <!-- Button text for capturing a photo [CHAR_LIMIT=10] -->
    <string name="editor_edit_photo_button">Edit</string>

    <!-- Hints for Editor Activity TextInputLayouts [CHAR LIMIT=20] -->
    <string name="editor_text_input_layout_name_hint">Name</string>
    <string name="editor_text_input_layout_quantity_hint">Quantity</string>
    <string name="editor_text_input_layout_category_hint">Category</string>
    <string name="editor_text_input_layout_price_hint">Price</string>
    <string name="editor_text_input_layout_phone_hint">Phone</string>
    <string name="editor_text_input_layout_email_hint">Email</string>

    <!-- Product section title for editor activity [CHAR LIMIT=20] -->
    <string name="editor_section_product_title">Product</string>

    <!-- Supplier section title for editor activity [CHAR LIMIT=20] -->
    <string name="editor_section_supplier_title">Supplier</string>

    <!-- Error message for editor item name EditText [CHAR LIMIT=30] -->
    <string name="editor_item_name_required">Item name required</string>

    <!-- Error message for editor item quantity EditText [CHAR LIMIT=30] -->
    <string name="editor_item_quantity_required">Item quantity required</string>

    <!-- Error message for editor item price EditText [CHAR LIMIT=30] -->
    <string name="editor_item_price_required">Valid price required</string>

    <!-- Error message for editor supplier email EditText [CHAR LIMIT=45] -->
    <string name="editor_supplier_email_not_valid">Not a valid email address</string>

    <!-- Progress dialog text [CHAR LIMIT=20] -->
    <string name="login_authenticating">Authenticating…</string>

    <!-- Progress dialog text [CHAR LIMIT=20] -->
    <string name="creating_account">Creating Account…</string>

    <!-- Error message for user name or password incorrect [CHAR LIMIT=50] -->
    <string name="login_user_name_password_incorrect">Username or password is incorrect</string>

    <!-- Error message for invalid email address [CHAT LIMIT=30]-->
    <string name="text_layout_invalid_email">enter valid email address</string>

    <!-- Error message for invalid password [CHAT LIMIT=35]-->
    <string name="text_layout_invalid_password">between 5 and 8 digits</string>

    <!-- Error message for invalid name [CHAT LIMIT=25]-->
    <string name="text_layout_invalid_name">at least 3 letters</string>

    <!-- Email body when sending email to supplier -->
    <string name="email_part_one">Good day,\nI would like to place an order for</string>
    <string name="email_part_two">for total quantity of</string>
    <string name="email_part_three">\n\nThanks and have a great day!</string>

    <!-- Email subject line when sending email to supplier [CHAR LIMIT=20] -->
    <string name="email_subject_line">New order for</string>

    <!-- Toast error message when deleting item from database [CHAR LIMIT=25] -->
    <string name="error_delete_item_toast">Error deleting item</string>

    <!-- Toast message when successfully deleted item from database [CHAR LIMIT=20] -->
    <string name="item_deleted_toast">Item deleted</string>

    <!-- Progress dialog message whe user is logging out [CHAR LIMIT=20]-->
    <string name="logging_out">Logging out…</string>

    <!-- Email EditText hint [CHAR LIMIT=10] -->
    <string name="email_hint">Email</string>

    <!-- Password EditText hint [CHAR LIMIT=10] -->
    <string name="password_hint">Password</string>

    <!-- Login button text [CHAR LIMIT=10] -->
    <string name="login_button_text">Login</string>

    <!-- Name EditText hint [CHAR LIMIT=10]-->
    <string name="name_hint">Name</string>

    <!-- Text to create a new account from main login page [CHAR LIMIT=35]-->
    <string name="create_new_account_text">Not account yet? Create one</string>

    <!-- Text to login back to existing account [CHAR LIMIT=35]-->
    <string name="login_to_existing_account_text">Already a member? Login</string>

    <!-- Button text for creating a new account [CHAR LIMIT=20]-->
    <string name="create_account_button_text">Create Account</string>

    <!-- Quantity heading in overview activity [CHAR LIMIT=10]-->
    <string name="overview_quantity_text">Quantity</string>

    <!-- Price heading in overview activity [CHAR LIMIT=10]-->
    <string name="overview_price_text">Price</string>

    <!-- Supplier detail heading in overview activity [CHAR LIMIT=20]-->
    <string name="overview_supplier_detail_text">Supplier details</string>

    <!-- Supplier name heading in overview activity [CHAR LIMIT=10]-->
    <string name="overview_supplier_name">Name</string>

    <!-- Supplier email heading in overview activity [CHAR LIMIT=10]-->
    <string name="overview_supplier_email">Email</string>

    <!-- Supplier phone heading in overview activity [CHAR LIMIT=10]-->
    <string name="overview_supplier_phone">Phone</string>

    <!-- List view hint for how to add new Item [CHAR LIMIT=60]-->
    <string name="list_add_new_item_hint">Click  +  on top right corner to add a new item</string>

    <!-- List view text for no content [CHAR LIMIT=15]-->
    <string name="list_no_content">no content</string>
</resources>
