<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.udninventory.login.MainLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginColorPrimary"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/login_default_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_email_edit_text_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_edit_text_layout_margin_bottom"
            android:layout_marginTop="@dimen/login_edit_text_layout_margin_top"
            app:errorTextAppearance="@color/primaryWhiteColor">

            <EditText
                android:id="@+id/login_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_edit_text_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_edit_text_layout_margin_bottom"
            android:layout_marginTop="@dimen/login_edit_text_layout_margin_top"
            app:errorTextAppearance="@color/primaryWhiteColor">

            <EditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="numberPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_default_margin"
            android:layout_marginTop="@dimen/login_default_margin"
            android:padding="@dimen/login_button_padding"
            android:text="@string/login_button_text" />

        <TextView
            android:id="@+id/login_link_create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_default_margin"
            android:gravity="center"
            android:padding="@dimen/login_button_padding"
            android:text="@string/create_new_account_text"
            android:textSize="@dimen/primary_text_size" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>